logs/supra.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/supra'...
Listing './lib/python3.5/site-packages/supra/auths'...
Listing './lib/python3.5/site-packages/supra/auths/oauth'...
Compiling './lib/python3.5/site-packages/supra/free.py'...
***   File "./lib/python3.5/site-packages/supra/free.py", line 286
    print SupraListView().dispatch(Request())
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/supra/sockets.py'...
***   File "./lib/python3.5/site-packages/supra/sockets.py", line 25
    print msg
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/supra/templates'...
Listing './lib/python3.5/site-packages/supra/templates/supra'...
Listing './lib/python3.5/site-packages/supra/templatetags'...
Listing './lib/python3.5/site-packages/supra-1.1.60.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
